# MLX8-W6-Preference_Optimisation

./: .gitignore
.charles/: pyproject.toml
.charles/.jy/: qwen_sft_script_(local_copy).py
.charles/nano-vllm-qwen3/: pyproject.toml  qwen3_download.sh  qwen3_nanollm.py  qwen3_transformers.py
.charles/trainings/: .env.example  README.md  data_prep.py  data_prep_unified.py  demo_gradio.py  eval.py  eval_reward.py  evaluate.py  logger_utils.py  model.py  train_dpo_qlora.py  train_full.py  train_lora.py  train_ppo.py  train_ppo_qlora.py  train_reward.py  train_reward_raw.py  train_sft.py
.github/: copilot-instructions.md
.umut/: PPO.py  README.md  dataloader.py  dataloaderV2.py  dataloaderV3.py  infer_sft.py  reward.py  rewardV2.py  trainSFT.py  trainSFT2.py  trainSFT3_LoRA.py  validation.py
course-materials/: README.md
