[project]
name = "mlx8-w6-preference-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "colorlog>=6.9.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.5",
    "gradio>=5.38.0",
    "matplot>=0.1.9",
    "nltk>=3.9.1",
    "peft>=0.16.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "trl>=0.19.1",
    "wandb>=0.21.0",
]
